fixed routing to CatchAll and redirect to main, added "tasks/add.html",  fixed wrapper's height and overflow

--- a/Worker/Content/Site.css
+++ b/Worker/Content/Site.css
@@ -1,1 +1,211 @@
-﻿
+﻿html, body, .fullheight {
+    height: 100%;
+    min-height: 100% !important;
+}
+
+body {
+    background: #f0f0f0;
+    overflow: hidden;
+}
+
+.go-back-button {
+    color: #aaa;
+    font-family: "Roboto", "PT Sans", sans-serif;
+    font-weight: 300;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    cursor: pointer;
+    padding-bottom: 15px;
+}
+
+    .go-back-button:hover {
+        color: #777;
+    }
+
+    .go-back-button h1 {
+        margin-left: 20px;
+        display: inline;
+    }
+
+#menu {
+    background: #333;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -ms-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -o-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    border-right: 1px solid black;
+    padding: 0;
+    width: 240px;
+    float: left;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+    #menu h1 {
+        color: #aaa;
+        font-family: "Roboto", "PT Sans", sans-serif;
+        font-weight: 300;
+        padding: 5px 20px 10px 20px;
+        margin: 0;
+    }
+
+    #menu a {
+        text-decoration: none;
+    }
+
+#main-wrapper {
+    overflow: hidden;
+    position: relative;
+}
+
+#main-content {
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -ms-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    -o-box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    background: white;
+    border-right: 1px solid #ddd;
+    padding: 20px;
+}
+
+#items-wrapper {
+    overflow-y: auto;
+    margin-right: -20px;
+    padding-right: 5px;
+}
+
+#sub-content {
+    position: relative;
+    padding: 0;
+}
+
+.viewB {
+    padding: 20px;
+    background: white;
+    border-bottom: 3px solid #ffab00;
+}
+
+.nav a {
+    -webkit-transition: all 0.25s;
+    -moz-transition: all 0.25s;
+    -o-transition: all 0.25s;
+    transition: all 0.25s;
+    display: block;
+    padding: 10px 20px;
+    color: #aaa;
+    -webkit-text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+    font-weight: bold;
+    text-decoration: none;
+}
+
+    .nav a:hover, .nav a.active {
+        background: rgba(0, 0, 0, 0.25);
+        color: white;
+    }
+
+.fa {
+    width: 16px;
+    text-align: center;
+}
+
+
+
+.animate.ng-enter,
+.animate.ng-leave {
+    width: 100%;
+    position: absolute;
+    -webkit-transition: 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -moz-transition: 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -ms-transition: 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -o-transition: 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    transition: 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+}
+
+.animate.ng-enter {
+    left: 200px;
+    /*top: 0;*/
+    opacity: 0;
+}
+
+    .animate.ng-enter.animate.ng-enter-active {
+        left: 0;
+        /*top: 0;*/
+        opacity: 1;
+    }
+
+.animate.ng-leave {
+    left: 0;
+    /*top: 0;*/
+    opacity: 1;
+}
+
+    .animate.ng-leave.animate.ng-leave-active {
+        left: -200px;
+        /*top: 0;*/
+        opacity: 0;
+    }
+
+
+.button {
+    color: white !important;
+    font-weight: bold;
+    background: #ffab00;
+    border-radius: 2px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    border: 1px solid #e69a00;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.125);
+    -webkit-transition: all 0.25s;
+    -moz-transition: all 0.25s;
+    -o-transition: all 0.25s;
+    transition: all 0.25s;
+    -webkit-transform: translateZ(100px) perspective(500) rotateY(0deg);
+    -moz-transform: translateZ(100px) perspective(500) rotateY(0deg);
+    -ms-transform: translateZ(100px) perspective(500) rotateY(0deg);
+    -o-transform: translateZ(100px) perspective(500) rotateY(0deg);
+    transform: translateZ(100px) perspective(500) rotateY(0deg);
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -ms-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+}
+
+    .button:hover {
+        background: #ffb31a;
+    }
+
+    .button:active {
+        /*padding: 11px 10px 9px 10px;*/
+        background: #e69a00;
+        -webkit-transform: translateZ(100px) perspective(500) rotateY(5deg);
+        -moz-transform: translateZ(100px) perspective(500) rotateY(5deg);
+        -ms-transform: translateZ(100px) perspective(500) rotateY(5deg);
+        -o-transform: translateZ(100px) perspective(500) rotateY(5deg);
+        transform: translateZ(100px) perspective(500) rotateY(5deg);
+    }
+
+    .button.tile {
+        display: block;
+        text-align: left;
+        background: #666666;
+        border: 1px solid #666;
+    }
+
+        .button.tile:active {
+            background: #595959;
+        }
+
+        .button.tile.active {
+            background: #595959;
+            color: white;
+        }
